--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -11,15 +11,10 @@ services:
       - "3000:3000"   # Next.js Web
     environment:
       - NODE_ENV=development
-      - DATABASE_URL=postgresql://postgres:password@morizo-postgres:5432/morizo
-      - REDIS_URL=redis://morizo-redis:6379
-      - JWT_SECRET=your-jwt-secret-key-here
       - NEXT_PUBLIC_SUPABASE_URL=https://kxfygkylipqqpzbayfje.supabase.co
       - NEXT_PUBLIC_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imt4Znlna3lsaXBxcXB6YmF5ZmplIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTgwODg1MTIsImV4cCI6MjA3MzY2NDUxMn0.AG97lp6tT9fhZl4IrpauCjisBms1PLPZ2BkH5OQtrqQ
-    depends_on:
-      - morizo-postgres
-      - morizo-redis
-      - morizo-supabase
+      # Vercel Postgresの接続情報は環境変数で設定
+      # DATABASE_URL=postgresql://username:password@host:port/database
     networks:
       - app-network
 
@@ -43,52 +38,6 @@ services:
       - morizo-web
     networks:
       - app-network
-
-  # PostgreSQL データベース
-  morizo-postgres:
-    image: postgres:15-alpine
-    container_name: morizo-postgres
-    environment:
-      - POSTGRES_DB=morizo
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=password
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    networks:
-      - app-network
-
-  # Redis (キャッシュ用)
-  morizo-redis:
-    image: redis:7-alpine
-    container_name: morizo-redis
-    ports:
-      - "6379:6379"
-    volumes:
-      - redis_data:/data
-    networks:
-      - app-network
-
-  # Supabase (ローカル開発用)
-  morizo-supabase:
-    image: supabase/postgres:15.1.0.117
-    container_name: morizo-supabase
-    environment:
-      - POSTGRES_DB=postgres
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-    ports:
-      - "5433:5432"
-    volumes:
-      - supabase_data:/var/lib/postgresql/data
-    networks:
-      - app-network
-
-volumes:
-  postgres_data:
-  redis_data:
-  supabase_data:
 
 networks:
   app-network:
